# data-logger

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  mk  sync.sh
.ssh/: note.txt
ai-prompts/: 5minute-mark.txt  events.txt  json2toml.txt  readme.md  taskrunner-dup.txt  worker.txt
cmake/: FindDatetimelib.cmake
config/: config.json  config.toml  test-config.toml
data/: .gitignore  README.md  current.status.test  current.temps.test
data/status/: current.10.0.1.197.db  current.cottage.test  readme.md
data/temperature/: current.cottage.test  current.deck-west.db  current.deck-west.test  readme.md
html/: index.html
html/assets/: Help-8wzS4DhR.js  Help-BvBoMAx3.js  Help-CTPD03sC.js  Help-D8DAgmO9.js  Help-j6Vp3cyY.js  index-BFFCPHx7.js  index-BODivOwk.js  index-BTIP_0kt.js  index-BWkNxO1o.css  index-BYghxfTM.js  index-Bqk25Sla.js
include/: precompiled.hpp
include/app/: cfgsvc.hpp  cli.hpp  client.hpp  database.hpp  datetime.hpp  datetimelib.hpp  exceptions.hpp  http_client.hpp  jsonkeys.hpp  logging.hpp  nodes.hpp  service.hpp  taskrunner.hpp  temperature.hpp  types.hpp  version.hpp  web-handlers.hpp  webhandlers.hpp
mock-service/: .gitignore  30-minute.txt  60-minute.txt  CMakeLists.txt  client-fetch.cpp  json-config.cpp  mockService.js  retry-service.cpp  succeed-fail.cpp  task-runner.cpp  truncate-minutes.cpp
sandbox/: CMakeLists.txt  cpp23-tests.cpp  format-tests.cpp  json-config.cpp  mk  mock-service.cpp  put-temperature-data.cpp  put-temperature.sh  random-float.cpp  read-last-lines.cpp  struct-enum.cpp  temp-file.cpp  temperature-put-service.cpp  test-ip-connection.cpp  ts-local-test.cpp
src/: cfgsvc.cpp  cli.cpp  client.cpp  data-tasks.cpp  database.cpp  datetime.cpp  datetimelib.cpp  http_client.cpp  integration.cpp  logging.cpp  main.cpp  nodes.cpp  service.cpp  taskrunner.cpp  temperature.cpp  unit.cpp  web-handlers.cpp  webhandlers.cpp
test/: .gitignore  CMakeLists.txt  client-fetch.cpp  config-service.cpp  find_probe.cpp  format-tests.cpp  json-config.cpp  observer-thread.cpp  put-temperature-data.cpp  put-temperature.sh  succeed-fail.cpp  time_t-sizes.cpp  transform-kv.cpp  ts2local.cpp
tests/: cfgsvc_tests.cpp  cli_tests.cpp  client_tests.cpp  database_tests.cpp  datetimelib_tests.cpp  exceptions_tests.cpp  main_unit.cpp  mock_http_client.hpp  service_tests.cpp  taskrunner_tests.cpp  temperature_tests.cpp  test.cpp  test_helpers.hpp  version_tests.cpp  webhandlers_tests.cpp
webapp/: .env.production  .gitignore  Home.vue  README.md  index.html  package.json  tailwind.config.js  tsvc.js  vite.config.js  vitest.config.js
webapp/src/: App.vue  config.js
webapp/src/components/: Footer.vue  Header.vue  Home.vue  Landing.vue  Login.vue
webapp/src/components/icons/: AppLogo.vue
webapp/src/router/: index.js
webapp/src/services/: TemperatureService.js
webapp/src/stores/: login.js  temperature.js
webapp/src/tests/router/: home.spec.js  navigation.spec.js  router.spec.js
webapp/src/tests/views/: views.spec.js
webapp/src/views/: About.vue  Contact.vue  Docs.vue  Faq.vue  Help.vue  Home.vue  Login.vue  PrivacyPolicy.vue  Register.vue  TermsOfService.vue
